err/provy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Fabric-1.14.0.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyNaCl-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/bcrypt-3.1.4.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/fabric'...
Compiling './lib/python3.5/site-packages/fabric/context_managers.py'...
***   File "./lib/python3.5/site-packages/fabric/context_managers.py", line 535
    def accept(channel, (src_addr, src_port), (dest_addr, dest_port)):
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fabric/contrib'...
Compiling './lib/python3.5/site-packages/fabric/network.py'...
***   File "./lib/python3.5/site-packages/fabric/network.py", line 25
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/operations.py'...
***   File "./lib/python3.5/site-packages/fabric/operations.py", line 220
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/sftp.py'...
***   File "./lib/python3.5/site-packages/fabric/sftp.py", line 85
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/state.py'...
***   File "./lib/python3.5/site-packages/fabric/state.py", line 436
    except ssh.SSHException, err:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/tasks.py'...
***   File "./lib/python3.5/site-packages/fabric/tasks.py", line 242
    except BaseException, e: # We really do want to capture everything
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/thread_handling.py'...
***   File "./lib/python3.5/site-packages/fabric/thread_handling.py", line 25
    raise e[0], e[1], e[2]
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/nacl'...
Listing './lib/python3.5/site-packages/nacl/bindings'...
Listing './lib/python3.5/site-packages/nacl/pwhash'...
Listing './lib/python3.5/site-packages/paramiko'...
Listing './lib/python3.5/site-packages/paramiko-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/provy'...
Compiling './lib/python3.5/site-packages/provy/console.py'...
***   File "./lib/python3.5/site-packages/provy/console.py", line 71
    print "\nInfo: Provy is running using the 'test' set of servers.\n"
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/provy/core'...
Compiling './lib/python3.5/site-packages/provy/core/roles.py'...
***   File "./lib/python3.5/site-packages/provy/core/roles.py", line 114
    print '[%s] %s' % (datetime.now().strftime('%H:%M:%S'), msg)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/provy/core/runner.py'...
***   File "./lib/python3.5/site-packages/provy/core/runner.py", line 56
    print "*" * len(msg)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/provy/more'...
Listing './lib/python3.5/site-packages/provy/more/base'...
Listing './lib/python3.5/site-packages/provy/more/base/database'...
Listing './lib/python3.5/site-packages/provy/more/centos'...
Listing './lib/python3.5/site-packages/provy/more/centos/database'...
Listing './lib/python3.5/site-packages/provy/more/centos/messaging'...
Listing './lib/python3.5/site-packages/provy/more/centos/networking'...
Listing './lib/python3.5/site-packages/provy/more/centos/package'...
Listing './lib/python3.5/site-packages/provy/more/centos/users'...
Listing './lib/python3.5/site-packages/provy/more/centos/utils'...
Listing './lib/python3.5/site-packages/provy/more/centos/vcs'...
Listing './lib/python3.5/site-packages/provy/more/debian'...
Listing './lib/python3.5/site-packages/provy/more/debian/cache'...
Listing './lib/python3.5/site-packages/provy/more/debian/cache/templates'...
Listing './lib/python3.5/site-packages/provy/more/debian/database'...
Listing './lib/python3.5/site-packages/provy/more/debian/monitoring'...
Listing './lib/python3.5/site-packages/provy/more/debian/monitoring/templates'...
Listing './lib/python3.5/site-packages/provy/more/debian/networking'...
Listing './lib/python3.5/site-packages/provy/more/debian/package'...
Listing './lib/python3.5/site-packages/provy/more/debian/programming'...
Listing './lib/python3.5/site-packages/provy/more/debian/security'...
Listing './lib/python3.5/site-packages/provy/more/debian/users'...
Listing './lib/python3.5/site-packages/provy/more/debian/vcs'...
Listing './lib/python3.5/site-packages/provy/more/debian/web'...
Listing './lib/python3.5/site-packages/provy/more/debian/web/templates'...
Listing './lib/python3.5/site-packages/provy/more/linux'...
Listing './lib/python3.5/site-packages/provy/more/linux/networking'...
Listing './lib/python3.5/site-packages/provy-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
